Name: ao
Version: 0.8.1
Synopsis: Interpreter for AO 
Category: Awelon
Description:
  Awelon Object (AO) is a simple language that expands into Awelon
  Byte Code (ABC), or an ambiguous variation thereof (AMBC). AO is
  ultimately designed for Reactive Demand Programming (RDP) but is
  suitable for procedural and functional programming (depending on
  the effects model, which is a parameter to the program).
  
  This project provides an 'aoi' REPL for most of AO - excluding 
  ambiguity, and a simplified effects model. The AO_PATH environment 
  variable determines search for '.ao' imports. If no '.ao' file is
  provided on the command line, the 'aoi' dict is imported.
  
  Goal is to support bootstrap of AO compilers and development 
  environments written in AO.

Author: David Barbour
Maintainer: dmbarbour@gmail.com
Homepage: http://github.com/dmbarbour/awelon

Package-Url: 
Copyright: (c) 2013 by David Barbour
License: BSD3
license-file: LICENSE.txt
Stability: experimental
build-type: Simple
cabal-version: >= 1.8

Source-repository head
  type: git
  location: http://github.com/dmbarbour/awelon.git

Executable aoi
  hs-source-dirs: hsrc_aoi
  build-depends: base (>= 4.5 && < 5)
    , ao
    , parsec
    , system-fileio
    , system-filepath
    , text
    , containers
    , bytestring
    -- , base64-bytestring (>= 1.0 && < 1.2)
    , haskeline (>= 0.7.1 && < 0.9)
    , transformers
    , random (>= 1.0 && < 1.2)
    , cprng-aes (>= 0.5 && < 0.7)
  main-is: AOI.hs
  ghc-options: -Wall -main-is AOI -rtsopts

Library
  hs-Source-Dirs: hsrc
  Build-Depends: base (>= 4.5 && < 5)
    , parsec (>= 3.1 && < 3.3)
    , text (>= 0.11 && < 0.13)
    , bytestring
    , system-fileio (>= 0.3.11 && < 0.4)
    , system-filepath
    , containers (>= 0.5 && < 0.7)

  Exposed-Modules:
    AO.V
    AO.Op
    AO.ABC
    AO.AOTypes
    AO.ParseAO
    AO.LoadAO
    AO.AO

  ghc-options: -Wall -auto-all

  if os(windows)
    CPP-Options: -DWinPathFmt

