Name: ao
Version: 0.10.2
Synopsis: Interpreter for AO 
Category: Awelon
Description:
  Awelon Object (AO) is a simple language that expands into Awelon
  Byte Code (ABC), or an ambiguous variation thereof (AMBC). AO is
  ultimately designed for Reactive Demand Programming (RDP) but is
  suitable for procedural and functional programming (depending on
  the effects model, which is determined by capabilities passed to
  the program).
  
  This package includes a library and a couple executables to work
  with '.ao' files. Developers can use the 'aoi' REPL to experiment
  with words, and the 'ao' executable to perform automatic testing.
  The goal is to bootstrap AO to native code or LLVM. These Haskell
  programs are relatively inefficient interpreters.
  
  The AO_PATH environment variable control search for '.ao' files.

Author: David Barbour
Maintainer: dmbarbour@gmail.com
Homepage: http://github.com/dmbarbour/awelon

Package-Url: 
Copyright: (c) 2013 by David Barbour
License: BSD3
license-file: LICENSE.txt
Stability: experimental
build-type: Simple
cabal-version: >= 1.18

Source-repository head
  type: git
  location: http://github.com/dmbarbour/awelon.git

Executable aoi
  hs-source-dirs: hsrc_aoi
  default-language: Haskell2010
  build-depends: base (>= 4.5 && < 5)
    , ao
    , parsec
    , system-fileio
    , system-filepath
    , text
    , containers
    , bytestring
    -- , base64-bytestring (>= 1.0 && < 1.2)
    , haskeline (>= 0.7.1 && < 0.9)
    , transformers
    , random (>= 1.0 && < 1.2)
    , cprng-aes (>= 0.5 && < 0.7)
  main-is: AOI.hs
  ghc-options: -auto-all -Wall -rtsopts

Executable ao
  hs-source-dirs: hsrc_ao
  default-language: Haskell2010
  build-depends: base (>= 4.6 && < 5)
     , ao
     , text
     , containers
     , parsec
  main-is: AO.hs
  ghc-options: -auto-all -Wall -rtsopts -threaded

Library
  hs-Source-Dirs: hsrc
  default-language: Haskell2010
  Build-Depends: base (>= 4.5 && < 5)
    , parsec 
    , text (>= 0.11 && < 1.3)
    , system-fileio (>= 0.3.11 && < 0.4)
    , system-filepath
    , containers (>= 0.5 && < 0.7)
    , transformers

  Exposed-Modules:
    AO.V
    AO.Op
    AO.ABC
    AO.AOTypes
    AO.ParseAO
    AO.LoadAO
    AO.AO
  
  ghc-options: -Wall -auto-all

  if os(windows)
    CPP-Options: -DWinPathFmt

