Name: ao
Version: 0.14
Synopsis: Interpreter for AO 
Category: Awelon
Description:
  Awelon Object (AO) is a simple language that expands into Awelon
  Byte Code (ABC), or an ambiguous variation thereof (AMBC). AO is
  ultimately designed for Reactive Demand Programming (RDP) but is
  suitable for procedural and functional programming. The paradigm
  can change based on the implementation and provided capabilities.
  This particular implementation is imperative in nature.
  
  This package includes library `ao` and executables `ao` and `aoi`
  for working with AO code. `aoi` is a simple REPL, while `ao` will
  run tests or provide quick introspection of the AO dictionary. AO
  uses a global dictionary concept instead of importing libraries. 
  This implementation uses both interpreters and JIT (via 'plugins').
  
  This package currently supports a filesystem based dictionary with
  '.ao' files. Environment variable AO_PATH determines where we look
  for these files; AO_DICT (default "lang") determines the root file.
  
  The long term goal of this package is to get AO development into a
  state where it can easily bootstrap.

Author: David Barbour
Maintainer: dmbarbour@gmail.com
Homepage: http://github.com/dmbarbour/awelon

Package-Url: 
Copyright: (c) 2013-2014 by David Barbour
License: BSD3
license-file: LICENSE.txt
Stability: experimental
build-type: Simple
cabal-version: >= 1.18

Source-repository head
  type: git
  location: http://github.com/dmbarbour/awelon.git

Executable aoi
  hs-source-dirs: hsrc_aoi
  default-language: Haskell2010
  build-depends: base (>= 4.5 && < 5)
    , ao
    , parsec
    , system-fileio
    , system-filepath
    , text
    , containers
    , bytestring
    -- , base64-bytestring (>= 1.0 && < 1.2)
    , haskeline (>= 0.7.1 && < 0.9)
    , transformers
    , random (>= 1.0 && < 1.2)
    , cprng-aes (>= 0.5 && < 0.7)
  main-is: AOI.hs
  ghc-options: -auto-all -Wall -rtsopts

Executable ao
  hs-source-dirs: hsrc_ao
  default-language: Haskell2010
  build-depends: base (>= 4.6 && < 5)
     , ao
     , text
     , containers
     , parsec
  main-is: AO.hs
  ghc-options: -auto-all -Wall -rtsopts -threaded

Library
  hs-Source-Dirs: hsrc
  default-language: Haskell2010
  Build-Depends: base (>= 4.5 && < 5)
    , parsec 
    , text (>= 0.11 && < 1.3)
    , system-fileio (>= 0.3.11 && < 0.4)
    , system-filepath
    , containers (>= 0.5 && < 0.7)
    , transformers
    , plugins (>= 1.5 && < 1.7)

  Exposed-Modules:

    ABC.Operators
    ABC.Quote
    ABC.Simplify
    ABC.Imperative.Value
    ABC.Imperative.Operations
    -- ABC.Imperative.Prelude

    AO.V
    AO.Op
    AO.ABC
    AO.TypeABC
    AO.AOTypes
    AO.ParseAO
    AO.LoadAO
    AO.AO
  
  ghc-options: -Wall -auto-all

  if os(windows)
    CPP-Options: -DWinPathFmt

