Name: awelon
Version: 0.0.1
Synopsis: distributed orchestration via dataflow programming
Category: Compilers/Interpreters, Reactivity
Description:
  Awelon is a general purpose programming language designed for use
  in open distributed systems. Awelon is based on the bidirectional
  dataflow paradigm, reactive demand programming (RDP). Awelon adds
  features such as dependent types, sealers/unsealers, ad-hoc state,
  effect handlers, and specialized matrix/vector processing.
  
  See the README for details.

Author: David Barbour
Maintainer: dmbarbour@gmail.com
Homepage: http://github.com/dmbarbour/awelon
Copyright: (c) 2013 by David Barbour
License: BSD3
license-file: LICENSE.txt
Stability: experimental
build-type: Simple
cabal-version: >= 1.8

Source-repository head
  type: git
  location: http://github.com/dmbarbour/awelon.git

Library
  hs-Source-Dirs: src
  Build-Depends: base (>= 4.5 && < 5)
  Exposed-Modules:
    Awelon
  Other-Modules:

  ghc-options: -Wall -fno-warn-orphans -auto-all


