Name: aodict
Version: 0.2
Synopsis: Support use of AO's dictionary from Haskell
Category: Awelon
Description:
  Awelon Object (AO) is a simple concatenative language, but lacks
  (at the time of this writing) a proper compiler. To help address
  this weakness, I've provided a capability `ao dict2hs` to compile
  (or 'transpile') the current AO dictionary into Haskell code. The
  resulting `AODict` module is processed together with `AOPrelude`
  to form a library. Hopefully, the resulting performance is higher
  than the interpreted form. 
  
  This cabal file will build the library `aodict`. At the moment, 
  developers must run `ao dict2hs` by hand. :(
  
  The resulting dictionary has very few dependencies, just base.
  Developers can `import AODict` and almost immediately use it,
  or use this with ghci. In addition, `aoTest` will run all test
  words at the time of compile, and `aoExec` will run any one
  word in the library. 
  
  When calling `ao dict2hs`, the AO_PATH and AO_DICT environment
  variables determine what is loaded. AO_PATH is a typical path
  variable that names a sequence of directories to search. AO_DICT
  determines the root import for the dictionary (default 'lang').

Author: David Barbour
Maintainer: dmbarbour@gmail.com
Homepage: http://github.com/dmbarbour/awelon

Package-Url: 
Copyright: (c) 2013-2014 by David Barbour
License: BSD3
license-file: ../LICENSE.txt
Stability: experimental
build-type: Simple
cabal-version: >= 1.18

Source-repository head
  type: git
  location: http://github.com/dmbarbour/awelon.git

Flag fp
  Description: use Double numbers instead of Rational (for performance)
  Default: False

Flag substructure
  Description: enforce substructural attributes (affine, linear) on copy/drop 
  Default: True

Library
  hs-Source-Dirs: .
  default-language: Haskell2010
  Build-Depends: base (>= 4.5 && < 5)
  Exposed-Modules:
    AOPrelude
    AODict
  ghc-options: -Wall -auto-all
  if flag(fp)
    cpp-options: -DUSE_DOUBLE
  if flag(substructure)
    cpp-options: -DENFORCE_SUBSTRUCTURE

Executable aoExec
  hs-source-dirs: aoExec
  default-language: Haskell2010
  build-depends: base (>= 4.5 && < 5), aodict
  main-is: AOExec.hs
  ghc-options: -auto-all -Wall -rtsopts -threaded

Executable aoTest
  hs-source-dirs: aoTest
  default-language: Haskell2010
  build-depends: base (>= 4.5 && < 5), aodict
  main-is: AOTest.hs
  ghc-options: -auto-all -Wall -rtsopts -threaded

