Name: awelon
Version: 0.0.1
Synopsis: distributed orchestration via dataflow programming
Category: Compilers/Interpreters, Reactivity
Description:
  Awelon is a general purpose programming language for constructing 
  dataflow systems based on Reactive Demand Programming (RDP). RDP 
  supports effects - continuous queries and control signals - in a
  constrained manner that protects useful invariants and declarative
  properties. RDP is designed for open, heterogeneous, distributed
  applications and overlay networks. RDP is also suitable for multi
  agent systems and component based programming. 

  Awelon is a tacit concatenative language, arrow-based, though it
  has a look and feel similar to FORTH or Factor. Unlike those stack
  based programming languages, the runtime structure of Awelon is 
  static (being an arrow). However, compile-time metaprogramming is
  able to construct very ad-hoc behaviors. 

  Awelon is richly typed and type-safe. Programmers can model ad-hoc
  types by use of sealer/unsealer pairs and linear structures. State
  can be bound into the program by use of uniqueness types.

Author: David Barbour
Maintainer: dmbarbour@gmail.com
Homepage: http://github.com/dmbarbour/awelon
Copyright: (c) 2013 by David Barbour
License: BSD3
license-file: ../LICENSE.txt
Stability: experimental
build-type: Simple
cabal-version: >= 1.8

Source-repository head
  type: git
  location: http://github.com/dmbarbour/awelon.git

Library
  hs-Source-Dirs: .
  Build-Depends: base (>= 4.5 && < 5),
    text (>= 0.11.2),
    system-fileio (>= 0.3.11),
    system-filepath

  Exposed-Modules:
    Awelon
  Other-Modules:

  ghc-options: -Wall -auto-all


